crates/strider-analyze/tests/snapshots/v2__x64__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x401280:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "17" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v22" [color="#888888", style=dashed];
  "v22" -> "21" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v24" [color="#888888", style=dashed];
  "v24" -> "21" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "6" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x401379:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
